# c-snake

./: .gitignore  CMakeLists.txt  README.md  install.sh
include/: snake.hpp
src/: snake.cpp
